# devos

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc.json  Dockerfile  README.md  index.html  nginx.conf  nginx.ssl.conf.example  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.collab-ws.ts  vite.config.ts
.claude/: CLAUDE.MD  plan.md
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
backend/api/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
backend/infra/: README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  projects.queries.ts
src/app/: router.tsx
src/components/: backend-bootstrap.tsx  global-search.tsx  stub-page.tsx
src/hooks/: use-ai.ts  use-auth.ts  use-backend-bootstrap.ts  use-global-file-drop.tsx  use-integrations.ts  use-notification-ws.ts  use-profile.ts  use-project-api.ts  use-workspace-hydration.ts
src/lib/: ai-api.ts  api.ts  automation-engine.ts  backend-sync.ts  client-report-pdf.ts  collab-follow.ts  collab-presence.ts  collab-voice.ts  collab-ws.ts  demo-local-seed.ts  doc-formats.ts  download-utils.ts  export-doc-markdown.ts  format-date.ts  git.ts  global-invite-pool.ts  (+23 more)
(+342 files in other folders)
