[package]
name = "devos"
version = "0.1.0"
description = "DevOS — AI Development Workspace"
authors = ["DevOS team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "devos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
